# rag-milvus-py

./: .env.example  README.md  embedder.py  ingest.py  main.py  milvus_client.py  pyproject.toml  query.py
src/milvus1/: __init__.py  embedder.py  ingest.py  main.py  milvus_client.py  query.py
