[project]
name = "milvus1"
version = "0.1.0"
description = ""
authors = [
    {name = "Firdaus Adi Putra",email = "mail@firdaus.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymilvus (>=2.5.14,<3.0.0)",
    "openai (>=1.98.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
